Project chatalyst {
  database_type: 'MySQL'
  Note: 'Collage final year project where we are making a chat application with bots.'
}

Table Users {
    id varchar(32) [pk]
    username text
    picture text [not null]
}

Ref Users_Channels: Users.id <> Channels.id

Table Channels {
    id char(36) [pk]
    name text
    picture text
}

Ref: Messages.channelId > Channels.id

Table Messages {
    id char(36) [pk]
    image text [null]
    channelId char(36)
    sentBy char(32)
    sentOn timestamp
    content text
}

Table Friends {
    user varchar(32) [pk]
    friend varchar(32) [pk]
}
Ref: Friends.user > Users.id [delete: cascade]
Ref: Friends.friend > Users.id [delete: cascade]
